# talonic-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-18-talonic-python-sdk-v0.1.0.md
docs/superpowers/specs/: 2026-05-18-talonic-python-sdk-design.md
scripts/: check_spec.py  generate_models.py
src/talonic/: __init__.py  _config.py  _http.py  cli.py  client.py  errors.py
src/talonic/_models/: __init__.py  models.py
src/talonic/_types/: __init__.py  cost.py  extract_input.py  rate_limit.py
src/talonic/resources/: _base.py  credits.py  documents.py  extractions.py  fields.py  jobs.py  schemas.py
tests/: conftest.py  smoke.py
tests/cli/: test_cli_commands.py
tests/live/: test_live.py
tests/models/: test_model_roundtrip.py
tests/models/fixtures/: credits_balance.json  document_get.json  extraction_get.json  field_list.json  job_get.json  schema_list.json  search_result.json
tests/unit/: test_client.py  test_config.py  test_cost.py  test_credits.py  test_documents.py  test_errors.py  test_extract_input.py  test_extractions.py  test_fields.py  test_http_async.py  test_http_base.py  test_http_sync.py  test_jobs.py  test_rate_limit.py  test_schemas.py
