[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "talonic"
dynamic = ["version"]
description = "Official Talonic SDK for Python. Extract structured, schema-validated data from any document."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Talonic GmbH", email = "info@talonic.ai" }]
keywords = ["talonic", "ai", "document-extraction", "ocr", "structured-data", "pdf", "schema", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.20",
  "ruff>=0.5",
  "mypy>=1.10",
  "datamodel-code-generator>=0.25",
  "build>=1.2",
  "pre-commit>=3.7",
]

[project.scripts]
talonic = "talonic.cli:app"

[project.urls]
Homepage = "https://talonic.com"
Repository = "https://github.com/talonicdev/talonic-python"
Documentation = "https://github.com/talonicdev/talonic-python#readme"
Issues = "https://github.com/talonicdev/talonic-python/issues"

[tool.hatch.version]
path = "src/talonic/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/talonic"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/talonic/_models/**" = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
exclude = ["src/talonic/_models/", "tests/"]

# Suppress import-not-found for internal _types subpackage until all modules land.
# Remove this override once all _types/*.py files exist (after T6–T8).
[[tool.mypy.overrides]]
module = "talonic._types.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: requires TALONIC_API_KEY against production"]
filterwarnings = ["error"]
